# core

./: .gitignore  CMakeLists.txt
include/: board.h  core.h
src/: board.cpp
tests/: main.cpp
